Adding MenuButton to clean up the Footer implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ add_executable(QtMenuBar
 
 # Order matters here, the target must exist before attaching a QML module to it.
 set(plain_qml_files
+    ${QML_DIR}MenuButton.qml
     ${QML_DIR}Main.qml
     ${QML_DIR}Footer.qml
 )
